--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ru.alwertus</groupId>
     <artifactId>alwserv</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
     <name>alwserv</name>
     <description>Alwertus Site</description>
 
@@ -67,7 +67,9 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <!--<optional>true</optional>-->
+            <version>1.18.20</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- JSON -->
@@ -123,6 +125,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.5</version>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -134,7 +137,9 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
 
                 <configuration>
                     <archive>
@@ -156,6 +161,7 @@
                     </execution>
                 </executions>
             </plugin>
+
 
         </plugins>
     </build>
